auth and question endpoint
