# main.go
@@ -1,22 +1,14 @@
 package main
 
 import (
-	"github.com/acha-bill/quizzer_backend/plugins"
-	"context"
-	"net/http"
-	"os"
-
+	"fmt"
+	"github.com/acha-bill/quizzer_backend/packages/mongodb"
+	"github.com/acha-bill/quizzer_backend/packages/server"
 	"github.com/joho/godotenv"
 	"github.com/labstack/gommon/log"
-	"go.mongodb.org/mongo-driver/mongo"
-	"go.mongodb.org/mongo-driver/mongo/options"
-
-	"github.com/labstack/echo/v4"
-	"github.com/labstack/echo/v4/middleware"
+	"os"
 )
 
-var collection *mongo.Collection
-var ctx = context.TODO()
 
 func init() {
 	err := godotenv.Load()
@@ -24,53 +16,44 @@ func init() {
 		log.Fatal(err.Error())
 		return
 	}
-
-	mongoURL := os.Getenv("MONGODB_URL")
-	dbName := os.Getenv("DATABASE_NAME")
-
-	clientOptions := options.Client().ApplyURI(mongoURL)
-	client, err := mongo.Connect(ctx, clientOptions)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	err = client.Ping(ctx, nil)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	collection = client.Database(dbName).Collection("testCollection")
+	fmt.Println("0")
 }
 
+// @title Quizzer API
+// @version 1.0
+// @description API for quizzer
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name Acha Bill
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host localhost:8080
+// @BasePath /api/v1
+// @query.collection.format multi
+
+// @securityDefinitions.basic BasicAuth
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
-	// Echo instance
-	e := echo.New()
-
-	// Middleware
-	e.Use(middleware.Logger())
-	e.Use(middleware.Recover())
-	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
-		AllowOrigins: []string{"*"},
-		AllowMethods: []string{http.MethodGet, http.MethodHead, http.MethodPut, http.MethodPatch, http.MethodPost, http.MethodDelete},
-	}))
-	e.Use(middleware.LoggerWithConfig(middleware.LoggerConfig{
-		Format: "method=${method}, uri=${uri}, status=${status}\n",
-	}))
-
-
-	// Routes
-	for _, plugin := range plugins.Plugins {
-		for _, handler := range plugin.Handlers() {
-			path := plugin.Name() + "/" + handler.Path
-			e.Add(handler.Method, path , handler.Handler)
-		}
+fmt.Println("1")
+	err := godotenv.Load()
+	if err != nil {
+		log.Fatal(err.Error())
+		return
 	}
 
-	// Start server
-	e.Logger.Fatal(e.Start(":8081"))
-}
+	log.Info(os.Getenv("MONGODB_URL"))
 
-// Handler
-func hello(c echo.Context) error {
-	return c.String(http.StatusOK, "Hello, World!")
+	_, err = mongodb.Connect()
+	if err != nil {
+		log.Fatal(err)
+	}
+	e := server.Instance()
+	e.Logger.Fatal(e.Start(":8081"))
 }
